header nav bugs has been fixed, on adaptive logo and icon aligned

--- a/css/mi_style.scss
+++ b/css/mi_style.scss
@@ -1,6 +1,6 @@
-header {
-  //position: absolute;
-}
+//header {
+//  //position: absolute;
+//}
 
 .nav-container {
   padding: 15px;
@@ -66,6 +66,7 @@ header {
     width: 100%;
     overflow: hidden;
     height: 0;
+    display: none;
   }
 
   .nav-open {
@@ -75,5 +76,11 @@ header {
   .nav-list li {
     width: 100%;
     margin: 10px 0;
+  }
+
+  .nav-logo {
+    display: block;
+    position: relative;
+    top: 20px;
   }
 }
